--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
+		"chart.js": "^4.4.0",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.17.0"
 	},
