--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"prepare": "husky install",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"deploy": "gh-pages -d build"
+
 	},
 	"dependencies": {
 		"chart.js": "^4.4.0",
@@ -29,6 +31,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"gh-pages": "^6.0.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^15.0.2",
 		"prettier": "^3.0.3",
