--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
 		"prepare": "husky install",
 		"prettier": "prettier --write .",
 		"deploy": "gh-pages -d build"
-
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.14.16",
+		"@mui/lab": "^5.0.0-alpha.151",
+		"@mui/material": "^5.14.16",
 		"chart.js": "^4.4.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
