--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"prettier": "prettier --write .",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
