--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
        
        - name: Install dependencies
          run: npm ci
+         env:
+          NODE_DEBUG: "1"
          
        - name: Build the app
          run: npm run build
