--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,12 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-       - name: Get repository code
-         uses: actions/setup-node@v3
+       - uses: actions/checkout@v
+       - uses: actions/setup-node@v3
        
        - name: Install dependencies
          run: npm ci
-         env:
-          NODE_DEBUG: "1"
-         
+       
        - name: Build the app
          run: npm run build
          
