--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-       - uses: actions/checkout@v
-       - uses: actions/setup-node@v3
+       - name: Get repository code
+         uses: actions/setup-node@v3
        
        - name: Install dependencies
          run: npm ci
