--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "content-management-system",
 	"private": true,
-	"homepage": "https://yaroslavprystupluk.github.io/content-management-system/",
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https//YaroslavPrystupluk.github.io/content-management-system",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
@@ -11,7 +11,7 @@
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"prettier": "prettier --write .",
-		"deploy": "gh-pages -d dist"
+		"deploy": "npm run build && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
